sequilize migration working
